--- a/package.json
+++ b/package.json
@@ -8,17 +8,22 @@
     "release": "SET NODE_ENV=production && grunt release",
     "build_dev": "SET NODE_ENV=development && grunt",
     "watch": "SET NODE_ENV=development && grunt watch",
-    "start": "node app"
+    "start": "node app",
+    "prepublish": "browserify src/Slider.js -o index.js -t [ babelify --presets [ es2015 react stage-2 ] ]"
   },
   "repository": {
     "type": "git",
     "url": "git+https://dyla@bitbucket.org/dyla/shitjeb2b.git"
   },
   "author": "Vullnet Dyla",
-  "license": "UNLICENSED",
+  "license": "GNU",
   "homepage": "https://bitbucket.org/dyla/shitjeb2b#readme",
   "devDependencies": {
-    "babelify": "6.0.1",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-2": "^6.13.0",
+    "babelify": "7.3.0",
+    "express": "^4.14.0",
     "grunt": "0.4.5",
     "grunt-browserify": "3.6.0",
     "grunt-contrib-clean": "^1.0.0",
@@ -28,8 +33,7 @@
     "grunt-env": "^0.4.4",
     "grunt-filerev": "^2.3.1",
     "grunt-replace": "^1.0.1",
-    "grunt-sass": "^1.2.0",
-    "express": "^4.14.0"
+    "grunt-sass": "^1.2.0"
   },
   "dependencies": {
     "keymirror": "^0.1.1",
