--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "GPL-3.0",
   "homepage": "https://bitbucket.org/dyla/shitjeb2b#readme",
   "devDependencies": {
+    "babel-polyfill": "^6.13.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-2": "^6.13.0",
