--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build_dev": "SET NODE_ENV=development && grunt",
     "watch": "SET NODE_ENV=development && grunt watch",
     "start": "node app",
-    "prepublish": "browserify src/Slider.js -o index.js -t [ babelify --presets [ es2015 react stage-2 ] ]"
+    "prepublish": "babel src/Slider.js -o index.js",
+    "old_prepublish": "browserify src/Slider.js -o index.js -t [ babelify --presets [ es2015 react stage-2 ] ]"
   },
   "repository": {
     "type": "git",
@@ -19,7 +20,7 @@
   "license": "GPL-3.0",
   "homepage": "https://bitbucket.org/dyla/shitjeb2b#readme",
   "devDependencies": {
-    "babel-polyfill": "^6.13.0",
+    "babel-cli": "^6.14.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-2": "^6.13.0",
@@ -37,7 +38,7 @@
     "grunt-sass": "^1.2.0"
   },
   "dependencies": {
-    "invariant": "^2.2.1",
+    "babel-polyfill": "^6.13.0",
     "keymirror": "^0.1.1",
     "react": "^15.3.0",
     "react-dom": "^15.3.0"
