--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "watch": "SET NODE_ENV=development && grunt watch",
     "start": "node app",
     "build": "babel src/Slider.js -o transpiled.js",
-    "prepublish": "browserify transpiled.js -o index.js",
-    "old_prepublish": "browserify src/Slider.js -o index.js -t [ babelify --presets [ es2015 react stage-2 ] ]"
+    "prepublish": "browserify src/Slider.js -o index.js -t [ babelify --presets [ es2015 react stage-2 ] ]"
   },
   "repository": {
     "type": "git",
