--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-image-slider",
   "version": "1.0.0",
   "description": "",
-  "main": "index.min.js",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "release": "SET NODE_ENV=production && grunt release",
