--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-image-slider",
+  "name": "react-component-slider",
   "version": "0.1.0",
   "description": "",
   "main": "main.js",
