--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "react-component-slider",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "",
   "main": "main.js",
   "browserify": {
-    "transform": [ "brfs" ]
+    "transform": [
+      "brfs"
+    ]
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
